Expand Day 13 SBT project documentation